--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 volumes:
   prometheus-data:
     driver: local
-  # grafana-data:
-  #   driver: local
+  grafana-data:
+    driver: local
   db-data:
     driver: local
 
@@ -50,14 +50,14 @@ services:
       - "--config.file=/etc/prometheus/prometheus.yml"
       
   # Grafana just for demonstration purpose only
-  # grafana:
-  #   image: grafana/grafana-oss:latest
-  #   container_name: grafana
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - grafana-data:/var/lib/grafana
-  #   restart: unless-stopped
+  grafana:
+    image: grafana/grafana-oss:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+    restart: unless-stopped
   promscale:
     image: timescale/promscale:latest
     container_name: promscale
