--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,20 @@ volumes:
 
 services:
 
-  # website:
-  #   build: .
-  #   container_name: website
-  #   volumes:
-  #     - .:/code
-  #   ports:
-  #     - "8000:8000"
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     - POSTGRES_USER=postgres
-  #     - POSTGRES_PASS=password
-  #     - POSTGRES_HOST=db
-  #   command: python manage.py runserver 0.0.0.0:8000
+  website:
+    build: .
+    container_name: website
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASS=password
+      - POSTGRES_HOST=db
+    command: python manage.py runserver 0.0.0.0:8000
     
   db:
     image: ghcr.io/timescale/dev_promscale_extension:develop-ts2-pg14
@@ -56,6 +56,8 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    depends_on:
+      - website
     ports:
       - "9090:9090"
     volumes:
@@ -74,6 +76,7 @@ services:
   #   volumes:
   #     - grafana-data:/var/lib/grafana
   #   restart: unless-stopped
+
   promscale:
     image: timescale/promscale:latest
     container_name: promscale
@@ -82,6 +85,7 @@ services:
     restart: on-failure
     depends_on:
       - db
+      - prometheus
     environment:
       PROMSCALE_DB_CONNECT_RETRIES: 10
       PROMSCALE_WEB_TELEMETRY_PATH: /metrics-text
