--- a/etc/prometheus/prometheus.yml
+++ b/etc/prometheus/prometheus.yml
@@ -18,20 +18,25 @@ scrape_configs:
     #   - targets: ['localhost:9090']
 
   # Example job for node_exporter
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets: ['node-exporter:9100']
+  # - job_name: 'node_exporter'
+  #   static_configs:
+  #     - targets: ['node-exporter:9100']
 
   # - job_name: 'node_exporter'
   #   file_sd_configs:
   #     - files: 
-  #       - 'targets.json'
+  #       - 'x.yml'
   #     - refresh_interval: 30s
 
-remote_write:
-  - url: "http://promscale:9201/write"
+  - job_name: 'node_exporter2'
+    http_sd_configs:
+      - url: 'http://website:8000/api/metrics/get-x/'
+        refresh_interval: 5s
+      
+# remote_write:
+#   - url: "http://promscale:9201/write"
   
-remote_read:
-  - url: "http://promscale:9201/read"
-    read_recent: true
+# remote_read:
+#   - url: "http://promscale:9201/read"
+#     read_recent: true
   
