--- a/etc/prometheus/prometheus.yml
+++ b/etc/prometheus/prometheus.yml
@@ -25,9 +25,14 @@ scrape_configs:
   # - job_name: 'node_exporter'
   #   file_sd_configs:
   #     - files: 
-  #       - 'targets.json'
+  #       - 'x.yml'
   #     - refresh_interval: 30s
 
+  # - job_name: 'node_exporter2'
+  #   http_sd_configs:
+  #     - url: 'http://website:8000/api/metrics/get-x/'
+  #       refresh_interval: 5s
+      
 remote_write:
   - url: "http://promscale:9201/write"
   
