--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,10 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASS=password
       - POSTGRES_HOST=db
-    command: python manage.py runserver 0.0.0.0:8000
+    command: 
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     
   db:
     image: ghcr.io/timescale/dev_promscale_extension:develop-ts2-pg14
