update userdata, prometheus and settings

--- a/conf/prometheus/prometheus.yml
+++ b/conf/prometheus/prometheus.yml
@@ -18,9 +18,9 @@ scrape_configs:
     #   - targets: ['localhost:9090']
 
   # Example job for node_exporter
-  # - job_name: 'node_exporter'
-  #   static_configs:
-  #     - targets: ['node-exporter:9100']
+   - job_name: 'node_exporter'
+     static_configs:
+       - targets: ['node-exporter:9100']
 
   # - job_name: 'node_exporter'
   #   file_sd_configs:
@@ -28,10 +28,10 @@ scrape_configs:
   #       - 'x.yml'
   #     - refresh_interval: 30s
 
-  - job_name: 'node_exporter2'
-    http_sd_configs:
-      - url: 'http://website:8000/api/dashboard/prometheus-targets/'
-        refresh_interval: 5s
+ # - job_name: 'node_exporter2'
+ #   http_sd_configs:
+ #     - url: 'http://website:8000/api/dashboard/prometheus-targets/'
+ #       refresh_interval: 5s
       
 remote_write:
   - url: "http://promscale:9201/write"
