--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django-cors-headers = "*"
 psycopg2 = "*"
 boto3 = "*"
 requests = "*"
+aws-assume-role-lib = "*"
+awspricing = "*"
 
 [dev-packages]
 
