--- a/conf/prometheus/prometheus.yml
+++ b/conf/prometheus/prometheus.yml
@@ -1,47 +1,14 @@
 global:
-  scrape_interval:     15s # By default, scrape targets every 15 seconds.
+  scrape_interval: 15s 
 
-
-  # Attach these labels to any time series or alerts when communicating with
-  # external systems (federation, remote storage, Alertmanager).
-  # external_labels:
-  #  monitor: 'codelab-monitor'
 
 # A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  # - job_name: 'prometheus'
-    # Override the global default and scrape targets from this job every 5 seconds.
-    # scrape_interval: 5s
-    # static_configs:
-    #   - targets: ['localhost:9090']
 
-  # Example job for node_exporter
-  #  - job_name: 'node_exporter'
-  #    static_configs:
-  #      - targets: ['node-exporter:9100']
-
-  # - job_name: 'node_exporter'
-  #   file_sd_configs:
-  #     - files: 
-  #       - 'x.yml'
-  #     - refresh_interval: 30s
-
-  - job_name: 'node_exporter2'
+  - job_name: 'EC2-Instances'
     http_sd_configs:
       - url: 'http://website:8000/api/dashboard/prometheus-targets/'
         refresh_interval: 5s
-
-  # access_key: 'ASIATA5QGSDNBVXKB3XJ'
-  # secret_key: 'mAK/pPKSqTbrARbmF+8LpZCxKBN7tVZo3QsI+24E'
-
-  # - job_name: 'node_exporter3'
-  #   ec2_sd_configs:
-  #     - region: us-east-1
-  #       port: 9100
-  #       refresh_interval: 5s 
-  #       profile: arn:aws:iam::208138571994:role/LabRole
-  #       role_arn: arn:aws:iam::208138571994:instance-profile/LabInstanceProfile
 
        
