--- a/Pipfile
+++ b/Pipfile
@@ -13,8 +13,9 @@ aws-assume-role-lib = "*"
 awspricing = "*"
 faker = "*"
 factory-boy = "*"
+django-environ = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8.10"
