--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ GitHub.sublime-settings
 .history
 
 .vscode
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
