--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ factory-boy = "*"
 django-environ = "*"
 pyjwt = "*"
 tzdata = "*"
-psycopg2-binary = "*"
+psycopg2-binary = "2.9.3"
 
 [dev-packages]
 
