--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,6 +1,6 @@
 container_commands:
   01_migrate:
-    command: "pipenv shell && python3 manage.py migrate --noinput"
+    command: "pipenv shell && python manage.py migrate --noinput"
     leader_only: true
 
 option_settings:
