Modify the django config v4

--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,6 +1,6 @@
 container_commands:
   01_migrate:
-    command: "python manage.py migrate --noinput"
+    command: "/bin/sh -c /usr/bin/python3.8 -m pipenv shell && /bin/sh -c /usr/bin/python3.8 manage.py migrate --noinput"
     leader_only: true
 
 option_settings:
