Modify the makemigrations

--- a/.ebextensions/02_django.config
+++ b/.ebextensions/02_django.config
@@ -1,5 +1,8 @@
 container_commands:
-  01_migrate:
+  01_makemigrations:
+    command: "/bin/sh -c /usr/bin/python3.8 -m pipenv shell && /bin/sh -c /usr/bin/python3.8 manage.py makemigrations --noinput"
+    leader_only: true
+  02_migrate:
     command: "/bin/sh -c /usr/bin/python3.8 -m pipenv shell && /bin/sh -c /usr/bin/python3.8 manage.py migrate --noinput"
     leader_only: true
 
